@@ -20,6 +20,7 @@
 ARC_C_DEF ("__ARC600__",	TARGET_ARC600)
 ARC_C_DEF ("__ARC601__",	TARGET_ARC601)
 ARC_C_DEF ("__ARC700__",	TARGET_ARC700)
+ARC_C_DEF ("__NPS400__",	TARGET_NPS400)
 ARC_C_DEF ("__ARCEM__",		TARGET_EM)
 ARC_C_DEF ("__ARCHS__",		TARGET_HS)
 ARC_C_DEF ("__ARC_ATOMIC__",	TARGET_ATOMIC)
